--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Countries</string>
+    <string name="name">Name</string>
+    <string name="code">Code</string>
+    <string name="domain">Domain</string>
 </resources>
